--- a/app/views/copyproject/index.html.erb
+++ b/app/views/copyproject/index.html.erb
@@ -1,6 +1,6 @@
 <h2><%=l(:label_project_new)%></h2>
 
-<%= labelled_form_for @project, :url => { :action => "create", :controller => "projects" } do |f| %>
+<%= labelled_form_for @project, :url => { :action => "copy", :controller => "copyproject"}  do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 
 <fieldset class="box tabular"><legend><%= l(:button_copy) %></legend>
